Adjusted size and changed color theme for Add New Dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,7 @@
         <item>Graph</item>
     </string-array>
 
+    <string name="hint_input_resource">Input</string>
+    <string name="hint_output_resource">Output</string>
+
 </resources>
