Fixed issue with appending Tab, semicolon and if-else to editor by using start,end feature for editTexts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,10 +24,15 @@
         <item>Array</item>
         <item>String</item>
         <item>Linked List</item>
+        <item>Stack</item>
+        <item>Queue</item>
+        <item>Dequeue</item>
         <item>Map</item>
         <item>Set</item>
         <item>Binary Tree</item>
         <item>Binary Search Tree</item>
+        <item>Heap</item>
+        <item>Priority Queue</item>
         <item>Graph</item>
     </string-array>
 
