Added WebView for Learning in LearningWebViewsActivity. Loads HTML based on option chosen from the HomeListView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,14 @@
 
     <string name="hint_input_resource">Input</string>
     <string name="hint_output_resource">Output</string>
+    <!--HTML INTRO FOR LEARNING WEB VIEWS -->
+    <string name="arrays_intro">In computer science, an array data structure, or simply an
+        array, is a data structure consisting of a collection of elements (values or variables),
+        each identified by at least one array index or key.
+        An array is stored such that the position of each element can be
+        computed from its index tuple by a mathematical formula.
+        [1][2][3] The simplest type of data structure is a linear array,
+        also called one-dimensional array.
+    </string>
 
 </resources>
