--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,11 @@
 
     <string name="navigation_drawer_open">Open Navigation Drawer</string>
     <string name="navigation_drawer_close">Close Navigation Drawer</string>
-
+    <!--Code Input Options Strings for Spinner-->
+    <string-array name="sort_by_options">
+        <item>Name</item>
+        <item>Date Modified</item>
+    </string-array>
     <!--Code Input Options Strings for Spinner-->
     <string-array name="data_structures">
         <item>Void</item>
