Mid way commit afer changing editor

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,9 @@
     </string>
     <string name="array_operationTable">
     </string>
+
+    <string-array name="fonts_spinner_array">
+    <item>Small</item>
+    <item>Big</item>
+    </string-array>
 </resources>
